kubernetes/apps/default/wordpress/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
        - name: wordpress
          image: wordpress:6-apache
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
      volumes:
        - name: mariadb-data
          emptyDir: {}
        - name: wordpress-data
          emptyDir: {}
